--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "canvas-confetti": "^1.9.3",
     "firebase": "^10.14.0",
     "framer-motion": "^11.7.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
